--- a/P4.ipynb
+++ b/P4.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +40,8 @@
     "import numpy as np\n",
     "import cv2\n",
     "import glob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib qt\n",
     "\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,15 +102,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# undistort chessboard images\n",
     "for fname in images:\n",
     "    img = cv2.imread(fname)\n",
     "    undist_img = undistort_image(img, mtx, dist)\n",
     "    new_fname = fname.replace('camera_cal','camera_cal_undistored_images')\n",
+    "    cv2.imwrite(new_fname, undist_img)\n",
+    "\n",
+    "# undistort test images\n",
+    "test_undistort_images = glob.glob('test_images/*.jpg')\n",
+    "for fname in test_undistort_images:\n",
+    "    img = cv2.imread(fname)\n",
+    "    undist_img = undistort_image(img, mtx, dist)\n",
+    "    new_fname = fname.replace('test_images','test_images_undistored')\n",
     "    cv2.imwrite(new_fname, undist_img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def threshold(img, s_thresh=(170, 255), sx_thresh=(20, 100)):\n",
+    "    img = np.copy(img)\n",
+    "    # Convert to HLS color space and separate the V channel\n",
+    "    hls = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)#.astype(np.float)\n",
+    "    l_channel = hls[:,:,1]\n",
+    "    s_channel = hls[:,:,2]\n",
+    "    # Grayscale\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
+    "    # Sobel x\n",
+    "    sobelx = cv2.Sobel(gray, cv2.CV_64F, 1, 0) # Take the derivative in x\n",
+    "    abs_sobelx = np.absolute(sobelx) # Absolute x derivative to accentuate lines away from horizontal\n",
+    "    scaled_sobel = np.uint8(255*abs_sobelx/np.max(abs_sobelx))\n",
+    "    \n",
+    "    # Threshold x gradient\n",
+    "    sxbinary = np.zeros_like(scaled_sobel)\n",
+    "    sxbinary[(scaled_sobel >= sx_thresh[0]) & (scaled_sobel <= sx_thresh[1])] = 1\n",
+    "    \n",
+    "    # Threshold color channel\n",
+    "    s_binary = np.zeros_like(s_channel)\n",
+    "    s_binary[(s_channel >= s_thresh[0]) & (s_channel <= s_thresh[1])] = 1\n",
+    "    # Stack each channel\n",
+    "    color_binary = np.dstack(( np.zeros_like(sxbinary), sxbinary, s_binary)) * 255\n",
+    "    \n",
+    "    combined_binary = np.zeros_like(sxbinary)\n",
+    "    combined_binary[(s_binary == 1) | (sxbinary == 1)] = 1\n",
+    "    return combined_binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test pipeline\n",
+    "test_img1 = mpimg.imread('test_images/test5.jpg')\n",
+    "result = threshold(test_img1)\n",
+    "\n",
+    "# Plot the result\n",
+    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "f.tight_layout()\n",
+    "\n",
+    "ax1.imshow(test_img1)\n",
+    "ax1.set_title('Original Image', fontsize=40)\n",
+    "\n",
+    "ax2.imshow(result, cmap='gray')\n",
+    "ax2.set_title('Threshold Result', fontsize=40)\n",
+    "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
    ]
   },
   {
@@ -136,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.5"
   },
   "widgets": {
    "state": {},
