--- a/P4.ipynb
+++ b/P4.ipynb
@@ -173,7 +173,7 @@
     "test_img1 = mpimg.imread('test_images/test5.jpg')\n",
     "result = threshold(test_img1)\n",
     "\n",
-    "# Plot the result\n",
+    "# Plot the threshold result\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
     "f.tight_layout()\n",
     "\n",
@@ -182,6 +182,103 @@
     "\n",
     "ax2.imshow(result, cmap='gray')\n",
     "ax2.set_title('Threshold Result', fontsize=40)\n",
+    "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def warp_image(undist_img):\n",
+    "    img_size = (undist_img.shape[1], undist_img.shape[0])\n",
+    "    \n",
+    "    # four source points\n",
+    "    src = np.float32(\n",
+    "        [[(img_size[0] / 2) - 55, img_size[1] / 2 + 100],\n",
+    "        [((img_size[0] / 6) - 10), img_size[1]],\n",
+    "        [(img_size[0] * 5 / 6) + 60, img_size[1]],\n",
+    "        [(img_size[0] / 2 + 55), img_size[1] / 2 + 100]])\n",
+    "    \n",
+    "    # four desired points\n",
+    "    dst = np.float32(\n",
+    "        [[(img_size[0] / 4), 0],\n",
+    "        [(img_size[0] / 4), img_size[1]],\n",
+    "        [(img_size[0] * 3 / 4), img_size[1]],\n",
+    "        [(img_size[0] * 3 / 4), 0]])\n",
+    "\n",
+    "    # Given src and dst points, calculate the perspective transform matrix\n",
+    "    M = cv2.getPerspectiveTransform(src, dst)\n",
+    "    # Warp the image using OpenCV warpPerspective()\n",
+    "    warped = cv2.warpPerspective(undist_img, M, img_size, flags=cv2.INTER_LINEAR)\n",
+    "\n",
+    "    # Return the resulting image and matrix\n",
+    "    return warped, M\n",
+    "\n",
+    "def unwarp_image(undist_img):\n",
+    "    img_size = (undist_img.shape[1], undist_img.shape[0])\n",
+    "    \n",
+    "    # four source points\n",
+    "    src = np.float32(\n",
+    "        [[(img_size[0] / 2) - 55, img_size[1] / 2 + 100],\n",
+    "        [((img_size[0] / 6) - 10), img_size[1]],\n",
+    "        [(img_size[0] * 5 / 6) + 60, img_size[1]],\n",
+    "        [(img_size[0] / 2 + 55), img_size[1] / 2 + 100]])\n",
+    "    \n",
+    "    # four desired points\n",
+    "    dst = np.float32(\n",
+    "        [[(img_size[0] / 4), 0],\n",
+    "        [(img_size[0] / 4), img_size[1]],\n",
+    "        [(img_size[0] * 3 / 4), img_size[1]],\n",
+    "        [(img_size[0] * 3 / 4), 0]])\n",
+    "\n",
+    "    # Given src and dst points, calculate the perspective transform matrix\n",
+    "    M = cv2.getPerspectiveTransform(dst, src)\n",
+    "    # Warp the image using OpenCV warpPerspective()\n",
+    "    warped = cv2.warpPerspective(undist_img, M, img_size, flags=cv2.INTER_LINEAR)\n",
+    "\n",
+    "    # Return the resulting image and matrix\n",
+    "    return warped, M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test perspective transform\n",
+    "test_img2 = mpimg.imread('test_images/straight_lines1.jpg')\n",
+    "warped_img1, _ = warp_image(test_img2)\n",
+    "# Plot the perspective transform result\n",
+    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "f.tight_layout()\n",
+    "\n",
+    "ax1.imshow(test_img2)\n",
+    "ax1.set_title('Original Image', fontsize=40)\n",
+    "\n",
+    "ax2.imshow(warped_img1)\n",
+    "ax2.set_title('Warped Image', fontsize=40)\n",
+    "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test unwarp image\n",
+    "unwarped, _ = unwarp_image(warped_img1)\n",
+    "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
+    "f.tight_layout()\n",
+    "\n",
+    "ax1.imshow(warped_img1)\n",
+    "ax1.set_title('Warped Image', fontsize=40)\n",
+    "\n",
+    "ax2.imshow(unwarped)\n",
+    "ax2.set_title('Unwarped Image', fontsize=40)\n",
     "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
    ]
   },
