Plotted src and dst points on unwarped and warped test image

--- a/P4.ipynb
+++ b/P4.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,28 +244,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test perspective transform\n",
+    "# four test source points\n",
+    "src = [[(img_size[0] / 2) - 55, img_size[1] / 2 + 100],\n",
+    "    [((img_size[0] / 6) - 10), img_size[1]],\n",
+    "    [(img_size[0] * 5 / 6) + 60, img_size[1]],\n",
+    "    [(img_size[0] / 2 + 55), img_size[1] / 2 + 100]]\n",
+    "\n",
+    "# four test desired points\n",
+    "dst =[[(img_size[0] / 4), 0],\n",
+    "    [(img_size[0] / 4), img_size[1]],\n",
+    "    [(img_size[0] * 3 / 4), img_size[1]],\n",
+    "    [(img_size[0] * 3 / 4), 0]]\n",
+    "\n",
     "test_img2 = mpimg.imread('test_images/straight_lines1.jpg')\n",
+    "img_size = (test_img2.shape[1], test_img2.shape[0])\n",
     "warped_img1, _ = warp_image(test_img2)\n",
+    "\n",
     "# Plot the perspective transform result\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(24, 9))\n",
     "f.tight_layout()\n",
     "\n",
     "ax1.imshow(test_img2)\n",
+    "ax1.scatter(src[0][0], src[0][1], c='r')\n",
+    "ax1.scatter(src[1][0], src[1][1], c='r')\n",
+    "ax1.scatter(src[2][0], src[2][1], c='r')\n",
+    "ax1.scatter(src[3][0], src[3][1], c='r')\n",
     "ax1.set_title('Original Image', fontsize=40)\n",
     "\n",
     "ax2.imshow(warped_img1)\n",
+    "ax2.scatter(dst[0][0], dst[0][1], c='r')\n",
+    "ax2.scatter(dst[1][0], dst[1][1], c='r')\n",
+    "ax2.scatter(dst[2][0], dst[2][1], c='r')\n",
+    "ax2.scatter(dst[3][0], dst[3][1], c='r')\n",
     "ax2.set_title('Warped Image', fontsize=40)\n",
+    "\n",
     "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,9 +298,17 @@
     "f.tight_layout()\n",
     "\n",
     "ax1.imshow(warped_img1)\n",
+    "ax1.scatter(dst[0][0], dst[0][1], c='r')\n",
+    "ax1.scatter(dst[1][0], dst[1][1], c='r')\n",
+    "ax1.scatter(dst[2][0], dst[2][1], c='r')\n",
+    "ax1.scatter(dst[3][0], dst[3][1], c='r')\n",
     "ax1.set_title('Warped Image', fontsize=40)\n",
     "\n",
     "ax2.imshow(unwarped)\n",
+    "ax2.scatter(src[0][0], src[0][1], c='r')\n",
+    "ax2.scatter(src[1][0], src[1][1], c='r')\n",
+    "ax2.scatter(src[2][0], src[2][1], c='r')\n",
+    "ax2.scatter(src[3][0], src[3][1], c='r')\n",
     "ax2.set_title('Unwarped Image', fontsize=40)\n",
     "plt.subplots_adjust(left=0., right=1, top=0.9, bottom=0.)"
    ]
