--- a/P4.ipynb
+++ b/P4.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,13 +394,13 @@
     "    # Fit a second order polynomial to each\n",
     "    left_fit = np.polyfit(lefty, leftx, 2)\n",
     "    right_fit = np.polyfit(righty, rightx, 2)\n",
-    "\n",
-    "    return left_fit, right_fit, out_img, nonzerox, nonzeroy, left_lane_inds, right_lane_inds"
+    "    \n",
+    "    return left_fit, right_fit, out_img, nonzerox, nonzeroy, left_lane_inds, right_lane_inds, leftx, lefty, rightx, righty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -409,14 +409,14 @@
        "(720, 0)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# visualize polyfit of lane lines\n",
-    "left_fit, right_fit, out_img, nonzerox, nonzeroy, left_lane_inds, right_lane_inds = get_lane_line_info(binary_warped)\n",
+    "left_fit, right_fit, out_img, nonzerox, nonzeroy, left_lane_inds, right_lane_inds, leftx, lefty, rightx, righty = get_lane_line_info(binary_warped)\n",
     "\n",
     "ploty = np.linspace(0, binary_warped.shape[0]-1, binary_warped.shape[0] )\n",
     "left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "(720, 0)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,57 +607,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "539.011814521 m 605.854706701 m\n"
+      "7722.18098467 m 3639.69349903 m\n"
      ]
     }
    ],
    "source": [
     "# Test Calculate radius of curvature with fake data\n",
-    "\n",
+    "#################### begin fake data\n",
     "# Generate some fake data to represent lane-line pixels\n",
-    "ploty = np.linspace(0, 719, num=720)# to cover same y-range as image\n",
-    "quadratic_coeff = 3e-4 # arbitrary quadratic coefficient\n",
+    "###ploty = np.linspace(0, 719, num=720)# to cover same y-range as image\n",
+    "###quadratic_coeff = 3e-4 # arbitrary quadratic coefficient\n",
     "# For each y position generate random x position within +/-50 pix\n",
     "# of the line base position in each case (x=200 for left, and x=900 for right)\n",
-    "leftx = np.array([200 + (y**2)*quadratic_coeff + np.random.randint(-50, high=51) \n",
-    "                              for y in ploty])\n",
-    "rightx = np.array([900 + (y**2)*quadratic_coeff + np.random.randint(-50, high=51) \n",
-    "                                for y in ploty])\n",
+    "###leftx = np.array([200 + (y**2)*quadratic_coeff + np.random.randint(-50, high=51) \n",
+    "###                              for y in ploty])\n",
+    "###rightx = np.array([900 + (y**2)*quadratic_coeff + np.random.randint(-50, high=51) \n",
+    "###                                for y in ploty])\n",
     "\n",
-    "leftx = leftx[::-1]  # Reverse to match top-to-bottom in y\n",
-    "rightx = rightx[::-1]  # Reverse to match top-to-bottom in y\n",
+    "###leftx = leftx[::-1]  # Reverse to match top-to-bottom in y\n",
+    "###rightx = rightx[::-1]  # Reverse to match top-to-bottom in y\n",
     "\n",
     "\n",
     "# Fit a second order polynomial to pixel positions in each fake lane line\n",
-    "left_fit = np.polyfit(ploty, leftx, 2)\n",
-    "left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
-    "right_fit = np.polyfit(ploty, rightx, 2)\n",
-    "right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "###left_fit = np.polyfit(ploty, leftx, 2)\n",
+    "###left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "###right_fit = np.polyfit(ploty, rightx, 2)\n",
+    "###right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
     "\n",
     "# Plot up the fake data\n",
-    "mark_size = 3\n",
-    "plt.plot(leftx, ploty, 'o', color='red', markersize=mark_size)\n",
-    "plt.plot(rightx, ploty, 'o', color='blue', markersize=mark_size)\n",
-    "plt.xlim(0, 1280)\n",
-    "plt.ylim(0, 720)\n",
-    "plt.plot(left_fitx, ploty, color='green', linewidth=3)\n",
-    "plt.plot(right_fitx, ploty, color='green', linewidth=3)\n",
-    "plt.gca().invert_yaxis() # to visualize as we do the images\n",
+    "###mark_size = 3\n",
+    "###plt.plot(leftx, ploty, 'o', color='red', markersize=mark_size)\n",
+    "###plt.plot(rightx, ploty, 'o', color='blue', markersize=mark_size)\n",
+    "###plt.xlim(0, 1280)\n",
+    "###plt.ylim(0, 720)\n",
+    "###plt.plot(left_fitx, ploty, color='green', linewidth=3)\n",
+    "###plt.plot(right_fitx, ploty, color='green', linewidth=3)\n",
+    "###plt.gca().invert_yaxis() # to visualize as we do the images\n",
+    "\n",
+    "##################### end fake data\n",
+    "\n",
+    "# Calculate radius of curvature with real data\n",
     "\n",
     "# Define conversions in x and y from pixels space to meters\n",
     "ym_per_pix = 30/720 # meters per pixel in y dimension\n",
     "xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
     "\n",
     "# Fit new polynomials to x,y in world space\n",
-    "left_fit_cr = np.polyfit(ploty*ym_per_pix, leftx*xm_per_pix, 2)\n",
-    "right_fit_cr = np.polyfit(ploty*ym_per_pix, rightx*xm_per_pix, 2)\n",
+    "left_fit_cr = np.polyfit(ploty*ym_per_pix, left_fitx*xm_per_pix, 2)\n",
+    "right_fit_cr = np.polyfit(ploty*ym_per_pix, right_fitx*xm_per_pix, 2)\n",
     "# Calculate the new radii of curvature\n",
     "left_curverad = ((1 + (2*left_fit_cr[0]*y_eval*ym_per_pix + left_fit_cr[1])**2)**1.5) / np.absolute(2*left_fit_cr[0])\n",
     "right_curverad = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
@@ -667,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,16 +680,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f993f053cc0>"
+       "<matplotlib.image.AxesImage at 0x7f993dd752b0>"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
