--- a/P4.ipynb
+++ b/P4.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "(720, 0)"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "(720, 0)"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -671,16 +671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f993dd752b0>"
+       "<matplotlib.image.AxesImage at 0x7f993ed3ce10>"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
