--- a/P4.ipynb
+++ b/P4.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -704,6 +704,139 @@
     "# Combine the result with the original image\n",
     "result = cv2.addWeighted(test_img2, 1, newwarp, 0.3, 0)\n",
     "plt.imshow(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning up Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calibrate_camera():\n",
+    "    # prepare object points, like (0,0,0), (1,0,0), (2,0,0) ....,(6,5,0)\n",
+    "    objp = np.zeros((6*9,3), np.float32)\n",
+    "    objp[:,:2] = np.mgrid[0:9,0:6].T.reshape(-1,2)\n",
+    "\n",
+    "    # Arrays to store object points and image points from all the images.\n",
+    "    objpoints = [] # 3d points in real world space\n",
+    "    imgpoints = [] # 2d points in image plane.\n",
+    "    \n",
+    "    # Make a list of calibration images\n",
+    "    images = glob.glob('camera_cal/calibration*.jpg')\n",
+    "\n",
+    "    # Step through the list and search for chessboard corners\n",
+    "    for fname in images:\n",
+    "        img = cv2.imread(fname)\n",
+    "        gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "        # Find the chessboard corners\n",
+    "        ret, corners = cv2.findChessboardCorners(gray, (9,6),None)\n",
+    "\n",
+    "        # If found, add object points, image points\n",
+    "        if ret == True:\n",
+    "            objpoints.append(objp)\n",
+    "            imgpoints.append(corners)\n",
+    "\n",
+    "            # Draw and display the corners\n",
+    "            img = cv2.drawChessboardCorners(img, (9,6), corners, ret)\n",
+    "            #cv2.imshow('img',img)\n",
+    "            new_fname = fname.replace('camera_cal','camera_cal_with_corners')\n",
+    "            cv2.imwrite(new_fname, img)\n",
+    "            #cv2.waitKey(500)\n",
+    "        #else:\n",
+    "        #    print('No corners found for', fname)\n",
+    "\n",
+    "    ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
+    "    return ret, mtx, dist, rvecs, tvecs\n",
+    "\n",
+    "# Assumes Camera Calibration has already been done\n",
+    "def pipeline(img):\n",
+    "    ## undistort, threshold and warp (perspective transform) image\n",
+    "    undist_img = undistort_image(img, _mtx, _dist)\n",
+    "    thresh_img = threshold(undist_img)\n",
+    "    warped_img = warp_image(thresh_img)\n",
+    "    \n",
+    "    ## calculate and visualize polyfit of lane lines\n",
+    "    left_fit, right_fit, out_img, nonzerox, nonzeroy, left_lane_inds, right_lane_inds, leftx, lefty, rightx, righty = get_lane_line_info(warped_img)\n",
+    "\n",
+    "    ploty = np.linspace(0, warped_img.shape[0]-1, warped_img.shape[0] )\n",
+    "    left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "    right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "\n",
+    "    ## Calculate radius of curvature\n",
+    "    # Define conversions in x and y from pixels space to meters\n",
+    "    ym_per_pix = 30/720 # meters per pixel in y dimension\n",
+    "    xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
+    "\n",
+    "    # Fit new polynomials to x,y in world space\n",
+    "    left_fit_cr = np.polyfit(ploty*ym_per_pix, left_fitx*xm_per_pix, 2)\n",
+    "    right_fit_cr = np.polyfit(ploty*ym_per_pix, right_fitx*xm_per_pix, 2)\n",
+    "    # Calculate the new radii of curvature\n",
+    "    left_curverad = ((1 + (2*left_fit_cr[0]*y_eval*ym_per_pix + left_fit_cr[1])**2)**1.5) / np.absolute(2*left_fit_cr[0])\n",
+    "    right_curverad = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
+    "    # Now our radius of curvature is in meters\n",
+    "    print('Radius of Curvature:', left_curverad, 'm', right_curverad, 'm')\n",
+    "    \n",
+    "    ## Draw lane position back onto unwarped road image\n",
+    "    # Create an image to draw the lines on\n",
+    "    warp_zero = np.zeros_like(warped_img).astype(np.uint8)\n",
+    "    color_warp = np.dstack((warp_zero, warp_zero, warp_zero))\n",
+    "\n",
+    "    # Recast the x and y points into usable format for cv2.fillPoly()\n",
+    "    pts_left = np.array([np.transpose(np.vstack([left_fitx, ploty]))])\n",
+    "    pts_right = np.array([np.flipud(np.transpose(np.vstack([right_fitx, ploty])))])\n",
+    "    pts = np.hstack((pts_left, pts_right))\n",
+    "\n",
+    "    # Draw the lane onto the warped blank image\n",
+    "    cv2.fillPoly(color_warp, np.int_([pts]), (0,255, 0))\n",
+    "\n",
+    "    # Warp the blank back to original image space using inverse perspective matrix (Minv)\n",
+    "    #newwarp = cv2.warpPerspective(color_warp, Minv, (image.shape[1], image.shape[0])) \n",
+    "    newwarp = unwarp_image(color_warp)\n",
+    "    # Combine the result with the original image\n",
+    "    result = cv2.addWeighted(img, 1, newwarp, 0.3, 0)\n",
+    "    plt.imshow(result)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calibrate Camera\n",
+    "_ret, _mtx, _dist, _rvecs, _tvecs = calibrate_camera()\n",
+    "#img = cv2.imread('camera_cal/calibration1.jpg')\n",
+    "#undist_img = undistort_image(img, mtx, dist)\n",
+    "#cv2.imshow('img', undist_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radius of Curvature: 579.031747426 m 20707.5538774 m\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_pipeline_img = mpimg.imread('test_images/test5.jpg')\n",
+    "#test_pipeline_img = mpimg.imread('test_images/straight_lines2.jpg')\n",
+    "pipeline(test_pipeline_img)"
    ]
   },
   {
