Tested working pipeline on all single test images

--- a/P4.ipynb
+++ b/P4.ipynb
@@ -822,19 +822,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radius of Curvature: 579.031747426 m 20707.5538774 m\n"
+      "Radius of Curvature: 1554.70015774 m 444.573378697 m\n"
      ]
     }
    ],
    "source": [
-    "test_pipeline_img = mpimg.imread('test_images/test5.jpg')\n",
+    "# Run single image thru pipeline\n",
+    "test_pipeline_img = mpimg.imread('test_images/test4.jpg')\n",
     "#test_pipeline_img = mpimg.imread('test_images/straight_lines2.jpg')\n",
     "pipeline(test_pipeline_img)"
    ]
