Calculated position of vehicle with respect to center

--- a/P4.ipynb
+++ b/P4.ipynb
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,6 +756,29 @@
     "    ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
     "    return ret, mtx, dist, rvecs, tvecs\n",
     "\n",
+    "class Line():\n",
+    "    def __init__(self):\n",
+    "        # was the line detected in the last iteration?\n",
+    "        self.detected = False  \n",
+    "        # x values of the last n fits of the line\n",
+    "        self.recent_xfitted = [] \n",
+    "        #average x values of the fitted line over the last n iterations\n",
+    "        self.bestx = None     \n",
+    "        #polynomial coefficients averaged over the last n iterations\n",
+    "        self.best_fit = None  \n",
+    "        #polynomial coefficients for the most recent fit\n",
+    "        self.current_fit = [np.array([False])]  \n",
+    "        #radius of curvature of the line in some units\n",
+    "        self.radius_of_curvature = None \n",
+    "        #distance in meters of vehicle center from the line\n",
+    "        self.line_base_pos = None \n",
+    "        #difference in fit coefficients between last and new fits\n",
+    "        self.diffs = np.array([0,0,0], dtype='float') \n",
+    "        #x values for detected line pixels\n",
+    "        self.allx = None  \n",
+    "        #y values for detected line pixels\n",
+    "        self.ally = None\n",
+    "\n",
     "# Assumes Camera Calibration has already been done\n",
     "def pipeline(img):\n",
     "    ## undistort, threshold and warp (perspective transform) image\n",
@@ -769,7 +792,7 @@
     "    ploty = np.linspace(0, warped_img.shape[0]-1, warped_img.shape[0] )\n",
     "    left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
     "    right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
-    "\n",
+    "    \n",
     "    ## Calculate radius of curvature\n",
     "    # Define conversions in x and y from pixels space to meters\n",
     "    ym_per_pix = 30/720 # meters per pixel in y dimension\n",
@@ -782,7 +805,20 @@
     "    left_curverad = ((1 + (2*left_fit_cr[0]*y_eval*ym_per_pix + left_fit_cr[1])**2)**1.5) / np.absolute(2*left_fit_cr[0])\n",
     "    right_curverad = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
     "    # Now our radius of curvature is in meters\n",
-    "    print('Radius of Curvature:', left_curverad, 'm', right_curverad, 'm')\n",
+    "    #print('Radius of Curvature:', left_curverad, 'm', right_curverad, 'm')\n",
+    "    left_lane_pos = left_fitx[0]*xm_per_pix\n",
+    "    #print(left_lane_pos)\n",
+    "    right_lane_pos = right_fitx[0]*xm_per_pix\n",
+    "    #print(right_lane_pos)\n",
+    "    center_lane_pos = left_lane_pos + (3.7/2)\n",
+    "    img_center = (img.shape[1]*xm_per_pix)/2\n",
+    "    center_offset = round(center_lane_pos - img_center, 2)\n",
+    "    if center_offset < 0:\n",
+    "        print('Vehicle is', abs(center_offset), 'meters right of center')\n",
+    "    elif center_offset > 0:\n",
+    "        print('Vehicle is', abs(center_offset), 'meters left of center')\n",
+    "    else:\n",
+    "        print('Vehicle is at center')\n",
     "    \n",
     "    ## Draw lane position back onto unwarped road image\n",
     "    # Create an image to draw the lines on\n",
@@ -804,6 +840,45 @@
     "    result = cv2.addWeighted(img, 1, newwarp, 0.3, 0)\n",
     "    plt.imshow(result)\n",
     "    \n",
+    "    # return lane lines\n",
+    "    left_lane = Line()\n",
+    "    # was the line detected in the last iteration?\n",
+    "    left_lane.detected = True  \n",
+    "    # x values of the last n fits of the line\n",
+    "    left_lane.recent_xfitted = [] \n",
+    "    #average x values of the fitted line over the last n iterations\n",
+    "    left_lane.bestx = None     \n",
+    "    #polynomial coefficients averaged over the last n iterations\n",
+    "    left_lane.best_fit = None  \n",
+    "    #polynomial coefficients for the most recent fit\n",
+    "    left_lane.current_fit = [np.array([False])]  \n",
+    "    left_lane.radius_of_curvature = left_curverad\n",
+    "    left_lane.line_base_pos = img_center - left_lane_pos\n",
+    "    #difference in fit coefficients between last and new fits\n",
+    "    left_lane.diffs = np.array([0,0,0], dtype='float') \n",
+    "    left_lane.allx = leftx  \n",
+    "    left_lane.ally = lefty\n",
+    "    \n",
+    "    right_lane = Line()\n",
+    "    # was the line detected in the last iteration?\n",
+    "    right_lane.detected = True  \n",
+    "    # x values of the last n fits of the line\n",
+    "    right_lane.recent_xfitted = [] \n",
+    "    #average x values of the fitted line over the last n iterations\n",
+    "    right_lane.bestx = None     \n",
+    "    #polynomial coefficients averaged over the last n iterations\n",
+    "    right_lane.best_fit = None  \n",
+    "    #polynomial coefficients for the most recent fit\n",
+    "    right_lane.current_fit = [np.array([False])]  \n",
+    "    right_lane.radius_of_curvature = right_curverad\n",
+    "    right_lane.line_base_pos = right_lane_pos - img_center\n",
+    "    #difference in fit coefficients between last and new fits\n",
+    "    right_lane.diffs = np.array([0,0,0], dtype='float') \n",
+    "    right_lane.allx = rightx  \n",
+    "    right_lane.ally = righty\n",
+    "    \n",
+    "    return left_lane, right_lane\n",
+    "    \n",
     "    "
    ]
   },
@@ -822,22 +897,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Radius of Curvature: 1554.70015774 m 444.573378697 m\n"
+      "Vehicle is 0.48 meters left of center\n"
      ]
     }
    ],
    "source": [
     "# Run single image thru pipeline\n",
-    "test_pipeline_img = mpimg.imread('test_images/test4.jpg')\n",
+    "test_pipeline_img = mpimg.imread('test_images/test5.jpg')\n",
     "#test_pipeline_img = mpimg.imread('test_images/straight_lines2.jpg')\n",
-    "pipeline(test_pipeline_img)"
+    "left_lane, right_lane = pipeline(test_pipeline_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 415,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.37374814474\n",
+      "2.39295404961\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(left_lane.line_base_pos)\n",
+    "print(right_lane.line_base_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import everything needed to edit/save/watch video clips\n",
+    "from moviepy.editor import VideoFileClip\n",
+    "from IPython.display import HTML"
    ]
   },
   {
