--- a/P4.ipynb
+++ b/P4.ipynb
@@ -12016,7 +12016,7 @@
    ],
    "source": [
     "video_output = 'test_videos_output/projet_video_output.mp4'\n",
-    "clip1 = VideoFileClip(\"project_video.mp4\").subclip(0,5)\n",
+    "clip1 = VideoFileClip(\"project_video.mp4\")\n",
     "white_clip = clip1.fl_image(pipeline) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(video_output, audio=False)"
    ]
