Added image showing radius of curvature and center offset

--- a/P4.ipynb
+++ b/P4.ipynb
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,13 +813,20 @@
     "    center_lane_pos = left_lane_pos + (3.7/2)\n",
     "    img_center = (img.shape[1]*xm_per_pix)/2\n",
     "    center_offset = round(center_lane_pos - img_center, 2)\n",
-    "    #if center_offset < 0:\n",
-    "    #    print('Vehicle is', abs(center_offset), 'meters right of center')\n",
-    "    #elif center_offset > 0:\n",
-    "    #    print('Vehicle is', abs(center_offset), 'meters left of center')\n",
-    "    #else:\n",
-    "    #    print('Vehicle is at center')\n",
     "    \n",
+    "    vehicle_center_msg = ''\n",
+    "    if center_offset < 0:\n",
+    "        vehicle_center_msg = 'Vehicle is ' + str(abs(center_offset)) + ' meters right of center'\n",
+    "    elif center_offset > 0:\n",
+    "        vehicle_center_msg = 'Vehicle is ' + str(abs(center_offset)) + ' meters left of center'\n",
+    "    else:\n",
+    "        vehicle_center_msg = 'Vehicle is at center'\n",
+    "        \n",
+    "    radius_of_curvature_msg = 'Radius of Curvature: ' + str(round(left_curverad)) + ' m (left), ' + str(round(right_curverad)) + ' m (right)'\n",
+    "    \n",
+    "    #print(radius_of_curvature_msg)\n",
+    "    #print(vehicle_center_msg)\n",
+    "        \n",
     "    ## Draw lane position back onto unwarped road image\n",
     "    # Create an image to draw the lines on\n",
     "    warp_zero = np.zeros_like(warped_img).astype(np.uint8)\n",
@@ -838,6 +845,7 @@
     "    newwarp = unwarp_image(color_warp)\n",
     "    # Combine the result with the original image\n",
     "    result = cv2.addWeighted(img, 1, newwarp, 0.3, 0)\n",
+    "    #plt.title(radius_of_curvature_msg + '\\n' + vehicle_center_msg)\n",
     "    #plt.imshow(result)\n",
     "    \n",
     "    # return lane lines\n",
@@ -897,20 +905,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 447,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vehicle is 0.48 meters left of center\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run single image thru pipeline\n",
-    "test_pipeline_img = mpimg.imread('test_images/test5.jpg')\n",
+    "test_pipeline_img = mpimg.imread('test_images/test2.jpg')\n",
     "#test_pipeline_img = mpimg.imread('test_images/straight_lines2.jpg')\n",
     "#left_lane, right_lane = pipeline(test_pipeline_img)\n",
     "out_vid = pipeline(test_pipeline_img)"
