fix lane width and center offset

--- a/P4.ipynb
+++ b/P4.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "(720, 0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "(720, 0)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -673,14 +673,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7471.20064509 m 3639.69349903 m\n"
+      "6626.41946265 m 3228.13794874 m\n"
      ]
     }
    ],
@@ -722,8 +722,9 @@
     "# Calculate radius of curvature with real data\n",
     "\n",
     "# Define conversions in x and y from pixels space to meters\n",
+    "lane_width = abs(left_fitx[-1] - right_fitx[-1])\n",
     "ym_per_pix = 30/720 # meters per pixel in y dimension\n",
-    "xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
+    "xm_per_pix = 3.7/lane_width # meters per pixel in x dimension\n",
     "\n",
     "# Fit new polynomials to x,y in world space\n",
     "y_eval = np.max(ploty)\n",
@@ -738,16 +739,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f102316c3c8>"
+       "<matplotlib.image.AxesImage at 0x7f07dc040898>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -792,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,8 +873,10 @@
     "    \n",
     "    ## Calculate radius of curvature\n",
     "    # Define conversions in x and y from pixels space to meters\n",
+    "    lane_width = abs(left_fitx[-1] - right_fitx[-1])\n",
+    "    #print(lane_width)\n",
     "    ym_per_pix = 30/720 # meters per pixel in y dimension\n",
-    "    xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
+    "    xm_per_pix = 3.7/lane_width # meters per pixel in x dimension\n",
     "\n",
     "    # Fit new polynomials to x,y in world space\n",
     "    y_eval = np.max(ploty)\n",
@@ -884,9 +887,9 @@
     "    right_curverad = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
     "    # Now our radius of curvature is in meters\n",
     "    #print('Radius of Curvature:', left_curverad, 'm', right_curverad, 'm')\n",
-    "    left_lane_pos = left_fitx[0]*xm_per_pix\n",
+    "    left_lane_pos = left_fitx[-1]*xm_per_pix\n",
     "    #print(left_lane_pos)\n",
-    "    right_lane_pos = right_fitx[0]*xm_per_pix\n",
+    "    right_lane_pos = right_fitx[-1]*xm_per_pix\n",
     "    #print(right_lane_pos)\n",
     "    center_lane_pos = left_lane_pos + (3.7/2)\n",
     "    img_center = (img.shape[1]*xm_per_pix)/2\n",
@@ -993,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1014,12 +1017,13 @@
     "test_pipeline_img = mpimg.imread('test_images/test2.jpg')\n",
     "#test_pipeline_img = mpimg.imread('test_images/straight_lines2.jpg')\n",
     "#left_lane, right_lane = pipeline(test_pipeline_img)\n",
-    "out_img = pipeline(test_pipeline_img)"
+    "out_img = pipeline(test_pipeline_img)\n",
+    "#plt.imshow(out_img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1049,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [03:04<00:00,  7.64it/s]\n"
+      "100%|█████████▉| 1260/1261 [02:36<00:00,  8.36it/s]\n"
      ]
     },
     {
@@ -1055,8 +1059,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/project_video_output.mp4 \n",
       "\n",
-      "CPU times: user 6min 34s, sys: 14.7 s, total: 6min 48s\n",
-      "Wall time: 3min 6s\n"
+      "CPU times: user 6min 26s, sys: 11.8 s, total: 6min 37s\n",
+      "Wall time: 2min 37s\n"
      ]
     }
    ],
@@ -1069,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1088,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
