use undistorted image after unwarping

--- a/P4.ipynb
+++ b/P4.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
     "    #newwarp = cv2.warpPerspective(color_warp, Minv, (image.shape[1], image.shape[0])) \n",
     "    newwarp = unwarp_image(color_warp)\n",
     "    # Combine the result with the original image\n",
-    "    result = cv2.addWeighted(img, 1, newwarp, 0.3, 0)\n",
+    "    result = cv2.addWeighted(undist_img, 1, newwarp, 0.3, 0)\n",
     "    \n",
     "    # Write radius of curvature and center offset on image\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1049,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [02:36<00:00,  8.36it/s]\n"
+      "100%|█████████▉| 1260/1261 [02:34<00:00,  8.01it/s]\n"
      ]
     },
     {
@@ -1059,8 +1059,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/project_video_output.mp4 \n",
       "\n",
-      "CPU times: user 6min 26s, sys: 11.8 s, total: 6min 37s\n",
-      "Wall time: 2min 37s\n"
+      "CPU times: user 6min 18s, sys: 11.9 s, total: 6min 30s\n",
+      "Wall time: 2min 35s\n"
      ]
     }
    ],
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
