added sanity checks and using previous frame data if necessary

--- a/P4.ipynb
+++ b/P4.ipynb
@@ -131,12 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
     "def threshold(img, s_thresh=(170, 255), sx_thresh=(20, 100)):\n",
     "    img = np.copy(img)\n",
+    "    \n",
+    "    R = img[:,:,0]\n",
+    "    G = img[:,:,1]\n",
+    "    B = img[:,:,2]\n",
+    "    b_binary = np.zeros_like(B)\n",
+    "    b_binary[(B > 155) & (B <= 200)] = 1\n",
+    "\n",
     "    # Convert to HLS color space and separate the V channel\n",
     "    hls = cv2.cvtColor(img, cv2.COLOR_RGB2HLS)#.astype(np.float)\n",
     "    l_channel = hls[:,:,1]\n",
@@ -155,17 +162,20 @@
     "    # Threshold color channel\n",
     "    s_binary = np.zeros_like(s_channel)\n",
     "    s_binary[(s_channel >= s_thresh[0]) & (s_channel <= s_thresh[1])] = 1\n",
+    "    \n",
+    "    l_binary = np.zeros_like(l_channel)\n",
+    "    l_binary[(l_channel >= 225) & (l_channel <= 255)] = 1\n",
     "    # Stack each channel\n",
     "    color_binary = np.dstack(( np.zeros_like(sxbinary), sxbinary, s_binary)) * 255\n",
     "    \n",
     "    combined_binary = np.zeros_like(sxbinary)\n",
-    "    combined_binary[(s_binary == 1) | (sxbinary == 1)] = 1\n",
+    "    combined_binary[(s_binary == 1) | (sxbinary == 1) | ((b_binary == 1) & (l_binary == 1))] = 1\n",
     "    return combined_binary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,8 +867,15 @@
     "        #y values for detected line pixels\n",
     "        self.ally = None\n",
     "\n",
+    "_frame = 0\n",
+    "        \n",
     "# Assumes Camera Calibration has already been done\n",
     "def pipeline(img):\n",
+    "    global _last_left_fitx\n",
+    "    global _last_right_fitx\n",
+    "    global _last_ploty\n",
+    "    global _frame\n",
+    "\n",
     "    ## undistort, threshold and warp (perspective transform) image\n",
     "    undist_img = undistort_image(img, _mtx, _dist)\n",
     "    thresh_img = threshold(undist_img)\n",
@@ -907,6 +924,21 @@
     "    \n",
     "    #print(radius_of_curvature_msg)\n",
     "    #print(vehicle_center_msg)\n",
+    "    \n",
+    "    ## Sanity checks:\n",
+    "    ## if radius of curvature diff or lane width is unrealistic, use data from previous frame\n",
+    "    radcurvature_diff = abs(left_curverad - right_curverad)\n",
+    "    #print(lane_width)\n",
+    "    #print(radcurvature_diff)\n",
+    "    if radcurvature_diff > 100 or lane_width > 700:\n",
+    "        #print(radcurvature_diff)\n",
+    "        left_fitx  = _last_left_fitx\n",
+    "        right_fitx = _last_right_fitx\n",
+    "        ploty = _last_ploty\n",
+    "    else:\n",
+    "        _last_left_fitx = left_fitx\n",
+    "        _last_right_fitx = right_fitx\n",
+    "        _last_ploty = ploty\n",
     "        \n",
     "    ## Draw lane position back onto unwarped road image\n",
     "    # Create an image to draw the lines on\n",
@@ -953,41 +985,41 @@
     "    #plt.imshow(result)\n",
     "    \n",
     "    # return lane lines\n",
-    "    left_lane = Line()\n",
+    "    #left_lane = Line()\n",
     "    # was the line detected in the last iteration?\n",
-    "    left_lane.detected = True  \n",
+    "    #left_lane.detected = True  \n",
     "    # x values of the last n fits of the line\n",
-    "    left_lane.recent_xfitted = [] \n",
+    "    #left_lane.recent_xfitted = [] \n",
     "    #average x values of the fitted line over the last n iterations\n",
-    "    left_lane.bestx = None     \n",
+    "    #left_lane.bestx = None     \n",
     "    #polynomial coefficients averaged over the last n iterations\n",
-    "    left_lane.best_fit = None  \n",
+    "    #left_lane.best_fit = None  \n",
     "    #polynomial coefficients for the most recent fit\n",
-    "    left_lane.current_fit = [np.array([False])]  \n",
-    "    left_lane.radius_of_curvature = left_curverad\n",
-    "    left_lane.line_base_pos = img_center - left_lane_pos\n",
+    "    #left_lane.current_fit = [np.array([False])]  \n",
+    "    #left_lane.radius_of_curvature = left_curverad\n",
+    "    #left_lane.line_base_pos = img_center - left_lane_pos\n",
     "    #difference in fit coefficients between last and new fits\n",
-    "    left_lane.diffs = np.array([0,0,0], dtype='float') \n",
-    "    left_lane.allx = leftx  \n",
-    "    left_lane.ally = lefty\n",
+    "    #left_lane.diffs = np.array([0,0,0], dtype='float') \n",
+    "    #left_lane.allx = leftx  \n",
+    "    #left_lane.ally = lefty\n",
     "    \n",
-    "    right_lane = Line()\n",
+    "    #right_lane = Line()\n",
     "    # was the line detected in the last iteration?\n",
-    "    right_lane.detected = True  \n",
+    "    #right_lane.detected = True  \n",
     "    # x values of the last n fits of the line\n",
-    "    right_lane.recent_xfitted = [] \n",
+    "    #right_lane.recent_xfitted = [] \n",
     "    #average x values of the fitted line over the last n iterations\n",
-    "    right_lane.bestx = None     \n",
+    "    #right_lane.bestx = None     \n",
     "    #polynomial coefficients averaged over the last n iterations\n",
-    "    right_lane.best_fit = None  \n",
+    "    #right_lane.best_fit = None  \n",
     "    #polynomial coefficients for the most recent fit\n",
-    "    right_lane.current_fit = [np.array([False])]  \n",
-    "    right_lane.radius_of_curvature = right_curverad\n",
-    "    right_lane.line_base_pos = right_lane_pos - img_center\n",
+    "    #right_lane.current_fit = [np.array([False])]  \n",
+    "    #right_lane.radius_of_curvature = right_curverad\n",
+    "    #right_lane.line_base_pos = right_lane_pos - img_center\n",
     "    #difference in fit coefficients between last and new fits\n",
-    "    right_lane.diffs = np.array([0,0,0], dtype='float') \n",
-    "    right_lane.allx = rightx  \n",
-    "    right_lane.ally = righty\n",
+    "    #right_lane.diffs = np.array([0,0,0], dtype='float') \n",
+    "    #right_lane.allx = rightx  \n",
+    "    #right_lane.ally = righty\n",
     "    \n",
     "    return result#left_lane, right_lane\n",
     "    \n",
@@ -1034,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1081,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 1260/1261 [02:34<00:00,  8.01it/s]\n"
+      "100%|█████████▉| 1260/1261 [02:50<00:00,  7.79it/s]\n"
      ]
     },
     {
@@ -1059,22 +1091,24 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/project_video_output.mp4 \n",
       "\n",
-      "CPU times: user 6min 18s, sys: 11.9 s, total: 6min 30s\n",
-      "Wall time: 2min 35s\n"
+      "CPU times: user 6min 27s, sys: 11.9 s, total: 6min 38s\n",
+      "Wall time: 2min 52s\n"
      ]
     }
    ],
    "source": [
     "video_output = 'test_videos_output/project_video_output.mp4'\n",
-    "clip1 = VideoFileClip(\"project_video.mp4\")#.subclip(20,25)\n",
+    "clip1 = VideoFileClip(\"project_video.mp4\")#.subclip(0,5)\n",
     "white_clip = clip1.fl_image(pipeline) #NOTE: this function expects color images!!\n",
     "%time white_clip.write_videofile(video_output, audio=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 188,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1088,7 +1122,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,6 +1135,13 @@
     "</video>\n",
     "\"\"\".format(video_output))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
